fix: fix horizontal scrollbar on mobile
Further tweaks to get rid of pesky problem.

--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,17 @@
 html,
 body {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
   font-family: var(--body-font);
   color: var(--text-primary);
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 .page-container {
@@ -86,7 +92,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.9375rem clamp(0.9375rem, 3vw, 5rem);
+  padding: 0.9375rem clamp(0.9375rem, 3vw, 20px);
 }
 
 .search-box > input {
@@ -97,6 +103,7 @@ body {
   padding-left: 2.1875rem;
   background: url("../img/magnify.svg") no-repeat 0.625rem center;
   background-size: 1.125rem;
+  max-width: 11.25rem;
 }
 
 .profile-container {
@@ -129,7 +136,7 @@ body {
 .project__cards {
   display: grid;
   gap: 1.875rem;
-  grid-template-columns: repeat(auto-fit, minmax(15.625rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(15.625rem, 100%), 1fr));
 }
 
 .project__card {
@@ -141,6 +148,7 @@ body {
   position: relative;
   box-shadow: 6px 10px 5px 0px rgba(0, 0, 0, 0.05);
   transition: transform 0.1s ease;
+  min-width: 0;
 }
 
 .project__card:hover {
@@ -160,8 +168,8 @@ body {
 
 .project__actions {
   position: absolute;
-  right: 2.5rem;
-  bottom: 0.625rem;
+  right: 0.75rem;
+  bottom: 0.5rem;
 }
 
 .project__actions > img {
